--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,18 @@
 databases:
-  - name: micronaut
-    databaseName: micronaut_e9wp
-    user: micronaut_e9wp_user
+  - name: budget-app
+    databaseName: budget_app_k5p5
+    user: budget_app_k5p5_user
 
 services:
   - type: web
-    name: rails-project
+    name: budget-app
     runtime: ruby
     buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: micronaut
+          name: budget-app
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
